--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Grill&Chill | Premium BBQ Package</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 <style>
 :root{
   --primary:#e63946;
@@ -15,274 +17,310 @@
   --success:#25d366;
 }
 *{box-sizing:border-box}
-body{margin:0;font-family:'Poppins',sans-serif;background:var(--dark);color:var(--text);line-height:1.6}
-header{
-  min-height:64vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:36px;
-  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url('https://images.unsplash.com/photo-1558030006-450675393462');
-  background-size:cover;background-position:center;
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:var(--dark);
+  color:var(--text);
 }
-header h1{font-size:48px;margin:0}
-header p{font-size:18px;margin:10px 0 18px;max-width:760px}
-.btn{display:inline-block;background:var(--primary);color:#fff;padding:12px 20px;border-radius:12px;text-decoration:none;font-weight:600;cursor:pointer}
-section{padding:48px 20px;max-width:1200px;margin:auto}
-h2{text-align:center;margin-bottom:18px}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px}
-.card{background:var(--card);padding:20px;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.5)}
-.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
-.gallery img{width:100%;height:160px;object-fit:cover;border-radius:10px}
-label{display:block;margin-top:12px;font-weight:600}
-input,select,textarea{width:100%;padding:12px;border-radius:10px;border:none;margin-top:6px;background:#0b0b0b;color:var(--text)}
-.breakdown{background:#0b0b0b;padding:14px;border-radius:10px;margin-top:12px}
-.breakdown-row{display:flex;justify-content:space-between;margin-bottom:8px}
-.total{font-size:18px;font-weight:800;color:var(--success)}
-.small{font-size:13px;color:#bbb}
-.note{font-size:14px;color:#ccc;margin-top:12px;background:#0b0b0b;padding:12px;border-radius:10px}
-.actions{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
-.status-badge{display:inline-block;padding:8px 12px;border-radius:999px;background:#333;color:#fff;font-weight:700}
-.footer{background:#000;color:#aaa;text-align:center;padding:18px;margin-top:30px}
-@media(max-width:600px){header h1{font-size:34px}}
+header{
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+  background:
+    linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
+    url('https://images.unsplash.com/photo-1558030006-450675393462');
+  background-size:cover;
+  background-position:center;
+}
+header h1{font-size:52px;margin:0}
+header p{font-size:20px;max-width:600px;margin:20px auto}
+section{
+  padding:80px 20px;
+  max-width:1200px;
+  margin:auto;
+}
+h2{text-align:center;margin-bottom:40px}
+
+.btn{
+  background:var(--primary);
+  color:#fff;
+  padding:14px 32px;
+  border-radius:12px;
+  text-decoration:none;
+  font-weight:600;
+  cursor:pointer;
+  display:inline-block;
+}
+
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px;
+}
+
+.card{
+  background:var(--card);
+  padding:30px;
+  border-radius:22px;
+  box-shadow:0 12px 30px rgba(0,0,0,.5);
+}
+
+.badge{
+  background:var(--accent);
+  color:#000;
+  padding:6px 14px;
+  border-radius:20px;
+  font-size:12px;
+  font-weight:600;
+  display:inline-block;
+  margin-bottom:10px;
+}
+
+.gallery{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:20px;
+}
+.gallery img{
+  width:100%;
+  height:220px;
+  object-fit:cover;
+  border-radius:18px;
+}
+
+label{font-weight:600;margin-top:12px;display:block}
+input,select{
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  margin-top:6px;
+}
+
+.breakdown{
+  background:#0b0b0b;
+  padding:20px;
+  border-radius:14px;
+  margin-top:20px;
+}
+.row{
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:10px;
+}
+.total{
+  color:var(--success);
+  font-size:22px;
+  font-weight:700;
+}
+
+.footer{
+  background:#000;
+  text-align:center;
+  padding:30px;
+  color:#aaa;
+}
 </style>
 </head>
+
 <body>
 
 <header>
-  <h1>Grill&Chill</h1>
-  <p>Premium BBQ Package • Lengkap • Praktis • Siap Untuk Momen Spesial</p>
-  <a class="btn" href="#booking">Booking Sekarang</a>
+<h1>Grill&Chill</h1>
+<p>Premium BBQ Package • Lengkap • Praktis • Siap Untuk Momen Spesial</p>
+<a href="#booking" class="btn">Booking Sekarang</a>
 </header>
 
+<!-- PAKET -->
 <section>
-  <h2>Kenapa Grill&Chill?</h2>
-  <div class="grid">
-    <div class="card">🔥 Paket BBQ lengkap & siap pakai</div>
-    <div class="card">🥩 Daging fresh & kualitas premium</div>
-    <div class="card">🚚 Antar – jemput area Depok</div>
-    <div class="card">🎉 Cocok untuk keluarga & acara spesial</div>
-  </div>
+<h2>Paket Grill</h2>
+<div class="grid">
+
+<div class="card">
+<span class="badge">Best Seller</span>
+<h3>Paket Romantic</h3>
+<ul>
+<li>Grill Pan + Kompor + Gas</li>
+<li>Beef 250gr</li>
+<li>Chicken 250gr</li>
+<li>Saus BBQ + Sayur</li>
+<li>1–2 Orang</li>
+</ul>
+<strong>Rp 119.000</strong>
+</div>
+
+<div class="card">
+<span class="badge">Favorit</span>
+<h3>Paket Party</h3>
+<ul>
+<li>Grill Pan + Kompor + Gas</li>
+<li>Beef 500gr</li>
+<li>Chicken 500gr</li>
+<li>Saus BBQ + Sayur</li>
+<li>4–5 Orang</li>
+</ul>
+<strong>Rp 200.000</strong>
+</div>
+
+<div class="card">
+<h3>Paket Custom</h3>
+<p>Menu & porsi menyesuaikan kebutuhan acara.</p>
+<strong>Harga Menyesuaikan</strong>
+</div>
+
+</div>
 </section>
 
+<!-- GALERI -->
 <section>
-  <h2>Paket Grill</h2>
-  <div class="grid">
-    <div class="card">
-      <span style="display:inline-block;background:var(--accent);color:#000;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px">Best Seller</span>
-      <h3>Paket Romantic</h3>
-      <ul>
-        <li>Grill Pan + Kompor + Gas</li>
-        <li>Beef 250gr</li>
-        <li>Chicken 250gr</li>
-        <li>Saus BBQ + Sayur</li>
-        <li>1–2 Orang</li>
-      </ul>
-      <strong>Rp 119.000</strong>
-    </div>
-
-    <div class="card">
-      <span style="display:inline-block;background:var(--accent);color:#000;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px">Favorit</span>
-      <h3>Paket Party</h3>
-      <ul>
-        <li>Grill Pan + Kompor + Gas</li>
-        <li>Beef 500gr</li>
-        <li>Chicken 500gr</li>
-        <li>Saus BBQ + Sayur</li>
-        <li>4–5 Orang</li>
-      </ul>
-      <strong>Rp 200.000</strong>
-    </div>
-
-    <div class="card">
-      <h3>Paket Custom</h3>
-      <p>Menu & porsi fleksibel (hub admin).</p>
-      <strong>Harga menyesuaikan</strong>
-    </div>
-  </div>
+<h2>Galeri BBQ</h2>
+<div class="gallery">
+<img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
+<img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd">
+<img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092">
+<img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe">
+</div>
 </section>
 
-<section>
-  <h2>Galeri BBQ</h2>
-  <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1" alt="bbq1">
-    <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd" alt="bbq2">
-    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" alt="bbq3">
-    <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe" alt="bbq4">
-  </div>
-</section>
-
+<!-- BOOKING -->
 <section id="booking">
-  <h2>Hitung Harga & Booking</h2>
+<h2>Hitung Harga & Booking</h2>
 
-  <div class="card" style="max-width:820px;margin:auto">
+<div class="card">
 
-    <label>Pilih Paket</label>
-    <select id="paketSelect" onchange="calcAll()">
-      <option value="0">-- Pilih Paket --</option>
-      <option value="119000">Paket Romantic – Rp119.000</option>
-      <option value="200000">Paket Party – Rp200.000</option>
-      <option value="0">Paket Custom – Harga Menyesuaikan</option>
-    </select>
+<label>Pilih Paket</label>
+<select id="paket" onchange="hitung()">
+<option value="0">-- Pilih Paket --</option>
+<option value="119000">Paket Romantic</option>
+<option value="200000">Paket Party</option>
+</select>
 
-    <label>Metode Pengambilan</label>
-    <select id="pickupSelect" onchange="calcAll()">
-      <option value="ambil">Ambil Sendiri</option>
-      <option value="antar">Diantar</option>
-    </select>
+<label>Metode Pengambilan</label>
+<select id="metode" onchange="hitung()">
+<option value="ambil">Ambil Sendiri</option>
+<option value="antar">Diantar</option>
+</select>
 
-    <label>Jarak Pengantaran (KM)</label>
-    <input id="jarakInput" type="number" min="0" placeholder="Contoh: 8" oninput="calcAll()">
+<label>Jarak Pengantaran (KM)</label>
+<input type="number" id="jarak" placeholder="Contoh: 7" oninput="hitung()">
 
-    <div class="breakdown" id="breakdownBox">
-      <div class="breakdown-row"><div>Harga Paket</div><div id="hargaPaketText">Rp 0</div></div>
-      <div class="breakdown-row"><div>Ongkir</div><div id="ongkirText">Rp 0</div></div>
-      <div class="breakdown-row"><div>Subtotal</div><div id="subtotalText">Rp 0</div></div>
-      <div class="breakdown-row"><div>DP (50%)</div><div id="dpText">Rp 0</div></div>
-      <div class="breakdown-row total"><div>Sisa Bayar</div><div id="sisaText">Rp 0</div></div>
-    </div>
+<div class="breakdown">
+<div class="row"><span>Harga Paket</span><span id="hargaPaket">Rp 0</span></div>
+<div class="row"><span>Ongkir</span><span id="ongkir">Rp 0</span></div>
+<hr>
+<div class="row total"><span>Total</span><span id="total">Rp 0</span></div>
+<div class="row"><span>DP 50%</span><span id="dp">Rp 0</span></div>
+</div>
 
-    <div style="margin-top:12px">
-      <span class="status-badge" id="statusBadge">Status: MENUNGGU DP</span>
-    </div>
+<br>
 
-    <div class="note">
-      <strong>Penjelasan singkat:</strong>
-      <ol style="margin:8px 0 0 18px">
-        <li>Ongkir: 1–5 km = gratis. Jika > 5 km → ongkir = <em>jarak total × Rp 2.500</em>.</li>
-        <li>Subtotal = Harga Paket + Ongkir.</li>
-        <li>DP 50% = 50% × Subtotal (nominal untuk mengunci tanggal).</li>
-        <li>Sisa Bayar = Subtotal − DP.</li>
-      </ol>
-      <div class="small" style="margin-top:8px">Contoh: Paket Party Rp200.000, jarak 8 km → Ongkir 8×2.500=Rp20.000 → Subtotal Rp220.000 → DP Rp110.000 → Sisa Rp110.000.</div>
-    </div>
+<a id="formBtn" class="btn" target="_blank">📋 Isi Google Form</a>
+<button class="btn" style="background:#25d366;margin-left:10px" onclick="kirimWA()">💬 Kirim Via WhatsApp</button>
+<button class="btn" style="background:#444;margin-left:10px" onclick="showDP()">💳 Transfer DP</button>
 
-    <div class="actions">
-      <a id="openFormBtn" class="btn" target="_blank" rel="noopener">📋 Lanjut Isi Form Booking</a>
-      <a class="btn" style="background:var(--success);color:#000" id="waBtn">💬 Kirim Ringkasan via WA</a>
-    </div>
-
-    <p class="small" style="margin-top:12px">* Setelah klik Lanjut Isi Form: wajib upload KTP/KK & bukti transfer DP di Google Form. Tanpa bukti DP, booking akan berstatus MENUNGGU DP.</p>
-
-  </div>
+</div>
 </section>
 
 <footer class="footer">
-  <p>📍 Cimpaeun – Tapos Depok • WhatsApp: 089601360782</p>
-  <p>© 2025 Grill&Chill</p>
+<p>📍 Cimpaeun – Tapos Depok</p>
+<p>📞 WhatsApp 089601360782</p>
+<p>© 2025 Grill&Chill</p>
 </footer>
 
+<!-- POPUP DP -->
+<div id="dpPopup" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.85);z-index:999;align-items:center;justify-content:center">
+<div style="background:#161616;padding:28px;border-radius:18px;text-align:center;width:90%;max-width:420px">
+<h3>💳 Transfer DP 50%</h3>
+<h2 id="dpNominal" style="color:#25d366"></h2>
+<p><strong>BCA</strong></p>
+<p id="rekening">6830900096</p>
+<p>a.n <strong>Grill & Chill</strong></p>
+
+<button class="btn" onclick="copyText('rekening')">📋 Salin Rekening</button>
+<button class="btn" style="background:#25d366;margin-top:10px" onclick="copyDP()">📋 Salin Nominal</button>
+<br><br>
+<button class="btn" style="background:#555" onclick="closeDP()">Tutup</button>
+</div>
+</div>
+
 <script>
-/* -----------------------------
-  CONFIG: ganti sesuai form mu
-  - FORM_BASE: link prefill base dari Google Form (sampai ?usp=pp_url)
-  - ENTRY_* : jika kamu punya entry IDs untuk total/dp/sisa, masukkan di sini.
-  Jika kosong, total/dp/sisa tidak akan diprefill.
------------------------------- */
-/* Contoh prefill base kamu (dari sebelumnya) */
-const FORM_BASE = "https://docs.google.com/forms/d/e/1FAIpQLSeCAOL8N1m9EBtw8q7mZ7Gii87DdAjbmoedlib88B1SGsssdg/viewform?usp=pp_url";
+const FORM_BASE="https://docs.google.com/forms/d/e/1FAIpQLSeCAOL8N1m9EBtw8q7mZ7Gii87DdAjbmoedlib88B1SGsssdg/viewform?usp=pp_url";
 
-/* Masukkan entry IDs jika kamu ingin prefill Total/DP/Sisa di Form.
-   Jika kamu belum membuat field untuk Total/DP/Sisa di Form, biarkan kosong.
-   Contoh: ENTRY_PAKET = 'entry.1123641359' (dari link prefill) */
-const ENTRY_PAKET   = "entry.1123641359"; // paket
-const ENTRY_METODE  = "entry.1420825954"; // metode
-const ENTRY_JARAK   = ""; // contoh 'entry.7777777777' jika ada
-const ENTRY_TOTAL   = ""; // contoh 'entry.8888888888' jika ada
-const ENTRY_DP      = ""; // contoh 'entry.9999999999' if exist
-const ENTRY_SISA    = ""; // example
+const paket=document.getElementById("paket");
+const metode=document.getElementById("metode");
+const jarak=document.getElementById("jarak");
+const hargaPaket=document.getElementById("hargaPaket");
+const ongkirEl=document.getElementById("ongkir");
+const totalEl=document.getElementById("total");
+const dpEl=document.getElementById("dp");
+const formBtn=document.getElementById("formBtn");
 
-/* Nomor WhatsApp admin (international format without +) */
-const ADMIN_WA = "6289601360782";
+function rp(n){return "Rp "+n.toLocaleString("id-ID");}
 
-/* -----------------------------
-  Utility & calc functions
------------------------------- */
-function toRupiah(n){ return 'Rp ' + (Number(n)||0).toLocaleString('id-ID'); }
+function hitung(){
+const harga=Number(paket.value);
+const km=Number(jarak.value)||0;
+let ongkir=0;
+if(metode.value==="antar" && km>5){ongkir=(km-5)*2500}
+const total=harga+ongkir;
+const dp=total*0.5;
 
-function calcAll(){
-  const paketSel = document.getElementById('paketSelect');
-  const paketVal = Number(paketSel.value) || 0;
-  const paketTxt = paketSel.options[paketSel.selectedIndex].text || '-';
-  const metode = document.getElementById('pickupSelect').value;
-  const jarak = Number(document.getElementById('jarakInput').value) || 0;
+hargaPaket.innerText=rp(harga);
+ongkirEl.innerText=rp(ongkir);
+totalEl.innerText=rp(total);
+dpEl.innerText=rp(dp);
 
-  // Ongkir rule: 1-5 km free; >5 km => ongkir = jarak * 2500 (per permintaan)
-  let ongkir = 0;
-  if(metode === 'antar'){
-    if(jarak > 5) ongkir = Math.round(jarak * 2500);
-  }
-
-  const subtotal = paketVal + ongkir;
-  const dp = Math.round(subtotal * 0.5);
-  const sisa = subtotal - dp;
-
-  // Update UI
-  document.getElementById('hargaPaketText').innerText = toRupiah(paketVal);
-  document.getElementById('ongkirText').innerText = toRupiah(ongkir);
-  document.getElementById('subtotalText').innerText = toRupiah(subtotal);
-  document.getElementById('dpText').innerText = toRupiah(dp);
-  document.getElementById('sisaText').innerText = toRupiah(sisa);
-
-  // Save for WA & prefill
-  window.booking = {
-    paketTxt, paketVal, metode, jarak, ongkir, subtotal, dp, sisa
-  };
-
-  updateFormLink();
-  updateWAButton();
-  updateStatusBadge();
+formBtn.href=FORM_BASE+"&entry.1123641359="+encodeURIComponent(paket.options[paket.selectedIndex].text);
 }
 
-function updateStatusBadge(){
-  const el = document.getElementById('statusBadge');
-  // informatif only (real status in Google Sheet)
-  el.innerText = 'Status: MENUNGGU DP';
+/* ==== WHATSAPP FORMAT PROFESIONAL ==== */
+function kirimWA(){
+const paketText=paket.options[paket.selectedIndex].text;
+const metodeText=metode.value==="antar"?"Diantar":"Ambil Sendiri";
+const jarakText=metode.value==="antar"?jarak.value+" km":"-";
+
+const pesan=`🔥 BOOKING BBQ - GRILL&CHILL 🔥
+
+📦 Paket: ${paketText}
+🚚 Metode: ${metodeText}
+📍 Jarak: ${jarakText}
+
+💰 RINCIAN BIAYA
+• Harga Paket : ${hargaPaket.innerText}
+• Ongkir       : ${ongkirEl.innerText}
+—————————————
+• Total        : ${totalEl.innerText}
+• DP 50%       : ${dpEl.innerText}
+
+💳 Transfer DP:
+BCA 1234567890
+a.n Grill & Chill
+
+📎 Google Form & KTP akan segera saya isi/upload.`;
+
+window.open("https://wa.me/6289601360782?text="+encodeURIComponent(pesan),"_blank");
 }
 
-/* Build prefill URL dynamically; add fields only if ENTRY_* is set */
-function updateFormLink(){
-  if(!FORM_BASE) return;
-  const b = window.booking || {};
-  let url = FORM_BASE;
-  const parts = [];
-  if(ENTRY_PAKET) parts.push(ENTRY_PAKET + '=' + encodeURIComponent(b.paketTxt || ''));
-  if(ENTRY_METODE) parts.push(ENTRY_METODE + '=' + encodeURIComponent(b.metode || ''));
-  if(ENTRY_JARAK) parts.push(ENTRY_JARAK + '=' + encodeURIComponent(b.jarak || ''));
-  if(ENTRY_TOTAL) parts.push(ENTRY_TOTAL + '=' + encodeURIComponent(b.subtotal || ''));
-  if(ENTRY_DP) parts.push(ENTRY_DP + '=' + encodeURIComponent(b.dp || ''));
-  if(ENTRY_SISA) parts.push(ENTRY_SISA + '=' + encodeURIComponent(b.sisa || ''));
-  if(parts.length) url += '&' + parts.join('&');
-  document.getElementById('openFormBtn').href = url;
+function showDP(){
+document.getElementById("dpNominal").innerText=dpEl.innerText;
+document.getElementById("dpPopup").style.display="flex";
+}
+function closeDP(){document.getElementById("dpPopup").style.display="none";}
+function copyText(id){
+navigator.clipboard.writeText(document.getElementById(id).innerText);
+alert("Berhasil disalin ✅");
+}
+function copyDP(){
+navigator.clipboard.writeText(dpEl.innerText.replace("Rp ",""));
+alert("Nominal disalin ✅");
 }
 
-/* WA message builder */
-function updateWAButton(){
-  const btn = document.getElementById('waBtn');
-  const b = window.booking || {};
-  const msg =
-`Halo Grill&Chill 👋
-Saya ingin booking:
-
-Paket: ${b.paketTxt || '-'}
-Metode: ${b.metode || '-'}
-Jarak: ${b.jarak ? b.jarak + ' km' : '-'}
-Harga Paket: ${toRupiah(b.paketVal || 0)}
-Ongkir: ${toRupiah(b.ongkir || 0)}
-SUBTOTAL: ${toRupiah(b.subtotal || 0)}
-DP (50%): ${toRupiah(b.dp || 0)}
-Sisa Bayar: ${toRupiah(b.sisa || 0)}
-
-Saya akan mengisi form resmi dan upload KTP/KK serta bukti DP.`;
-
-  btn.onclick = function(){
-    const waUrl = `https://wa.me/${ADMIN_WA}?text=` + encodeURIComponent(msg);
-    window.open(waUrl, '_blank');
-  };
-}
-
-/* Init */
-document.addEventListener('DOMContentLoaded', function(){
-  // expose elements for calcAll
-  window.calcAll = calcAll;
-  calcAll();
-});
+hitung();
 </script>
 
 </body>
